# column-diff

./: .gitignore  .readthedocs.yml  pyproject.toml  requirements.txt
column_diff/: __init__.py  column_diff.py
docs/: README.rst  conf.py  documentation.rst  index.rst  requirements.txt
tests/: __init__.py  filtered_emails.xlsx  test_column_diff.py  test_emails.xlsx
