[tool.poetry]
name = "column-diff"
version = "0.1.0"
description = ""
authors = ["Thomas Breydo <tbreydo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
