[tool.poetry]
name = "column-diff"
version = "0.1.1"
description = "A Python package to filter emails from two columns of an Excel spreadsheet."
authors = ["Thomas Breydo <tbreydo@gmail.com>"]
readme = "docs/README.rst"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.1.4"
xlrd = "^1.2.0"
openpyxl = "^3.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
Sphinx = "^3.4.3"
sphinx-rtd-theme = "^0.5.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
